# Agentic-AI

01-Ai_agents_first/00_swarm/: readme.md
01-Ai_agents_first/01_uv/Hello-Agent/: pyproject.toml
01-Ai_agents_first/02_chainlite/: readme.md
01-Ai_agents_first/02_chainlite/Hello-Chainlite/: pyproject.toml
01-Ai_agents_first/02_chainlite/Hello-Chainlite/src/hello_chainlite/: __init__.py  chatbot.py
01-Ai_agents_first/03_hello_agent/hello-agents/: async-func-chatbot.py  chatbot-doctor.py
01-Ai_agents_first/03_hello_agent/hello-agents/chatbot-with-chainlit/: main.py  pyproject.toml
01-Ai_agents_first/04_streaming/streamed-chatbot/: main.py  pyproject.toml
01-Ai_agents_first/PROJECTS/assingment_1/: .env  config.py  main.py  pyproject.toml
01-Ai_agents_first/PROJECTS/calculator_agent/: .env  main.py  pyproject.toml
AGENTS/cold-mailing-agent/: README.md  main.py  pyproject.toml
AGENTS/cold-mailing-agent/src/cold_mailing_agent/: __init__.py  app.py  cold-mailing-agent.py  dashboard.py  database.db  requirements.txt
AGENTS/cold-mailing-agent/src/cold_mailing_agent/.github/workflows/: agent-runner.yml
