[project]
name = "cold-mailing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hamzanasir123", email = "hk435981@gmail.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "aiohttp>=3.12.9",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "linkedin-scraper>=2.11.5",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.0.16",
    "pydantic[email]>=2.11.5",
    "schedule>=1.2.2",
    "selenium>=4.33.0",
    "sendgrid>=6.12.3",
    "streamlit>=1.45.1",
    "supabase-py>=2.1.0",  
]

[project.scripts]
cold-mailing-agent = "cold_mailing_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
