[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hamzanasir123", email = "hk435981@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.16",
]

[project.scripts]
hello-agent = "hello_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
